added settings control

--- a/Tengu/Views/MainWindow.axaml
+++ b/Tengu/Views/MainWindow.axaml
@@ -114,14 +114,9 @@
 							<ui:NavigationViewItem Content="Search" />
 						</ui:NavigationViewItem.MenuItems>
 					</ui:NavigationViewItem>
-					<ui:NavigationViewItem Content="Settings">
-						<ui:NavigationViewItem.MenuItems>
-							<ui:NavigationViewItem Content="Customization">
-								<ui:NavigationViewItem.Icon>
-									<ui:PathIcon Data="{StaticResource Palette}" />
-								</ui:NavigationViewItem.Icon>
-							</ui:NavigationViewItem>
-						</ui:NavigationViewItem.MenuItems>
+					<ui:NavigationViewItem Content="Settings"
+										   Tag="{x:Type views:SettingsControl}">
+						
 					</ui:NavigationViewItem>
 					<ui:NavigationViewItem Content="Downloads"
 										   Tag="{x:Type views:DownloadControl}">
