--- a/Tengu/Views/LatestEpisodesControl.axaml
+++ b/Tengu/Views/LatestEpisodesControl.axaml
@@ -5,7 +5,7 @@
 			 xmlns:ui="using:FluentAvalonia.UI.Controls"
 			 xmlns:icons="using:Material.Icons.Avalonia"
 			 xmlns:vm="using:Tengu.ViewModels"
-			 xmlns:comm="using:Tengu.Business.Commons"
+			 xmlns:comm="using:Tengu.Business.Commons.Objects"
 			 xmlns:asyncImageLoader="clr-namespace:AsyncImageLoader;assembly=AsyncImageLoader.Avalonia"
 			 xmlns:conv="using:Tengu.Converters"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
