--- a/Tengu/Views/MainWindow.axaml
+++ b/Tengu/Views/MainWindow.axaml
@@ -134,9 +134,11 @@
 		<Panel Grid.Row="1">
 			<ui:Frame Name="FrameView"/>
 
+			<Grid ColumnDefinitions="*,*">
 			<ItemsControl Items="{Binding InfoBar.Messages}"
 						  Margin="5"
-						  VerticalAlignment="Bottom">
+						  Grid.Column="1"
+						  VerticalAlignment="Top">
 				<ItemsControl.ItemsPanel>
 					<ItemsPanelTemplate>
 						<StackPanel Orientation="Vertical"
@@ -157,6 +159,7 @@
 					</DataTemplate>
 				</ItemsControl.ItemTemplate>
 			</ItemsControl>
+			</Grid>
 		</Panel>
 	</Grid>
 
