--- a/Tengu/Views/SettingsControl.axaml
+++ b/Tengu/Views/SettingsControl.axaml
@@ -58,7 +58,7 @@
 								Margin="0,20">
 						<StackPanel HorizontalAlignment="Left">
 							<StackPanel Orientation="Horizontal"
-										Margin="5,0,0,0"
+										Margin="5,0,0,2"
 										Spacing="5">
 								<TextBlock Text="Download Directory" 
 										   FontWeight="Medium"/>
@@ -76,14 +76,45 @@
 								</TextBox.InnerRightContent>
 							</TextBox>
 						</StackPanel>
-						
-						<Button Content="Save" 
-								Margin="0,10,0,0"
-								Classes="accent"/>
+
+						<!-- Others options here -->
 					</StackPanel>
 				</TabItem>
 				<TabItem Header="MISCELLANEOUS" FontSize="14">
+					<StackPanel Spacing="10"
+								Margin="0,20">
+						<ToggleSwitch OffContent="Light Mode"
+									  OnContent="Dark Mode"/>
 
+						<StackPanel Orientation="Horizontal"
+									HorizontalAlignment="Left"
+										Spacing="10">
+							<TextBlock Text="Custom Color"
+									   VerticalAlignment="Center"/>
+							<ComboBox Width="200"
+									  Items="{Binding DefaultColors}">
+								<ComboBox.ItemTemplate>
+									<DataTemplate>
+										<StackPanel Orientation="Horizontal"
+													Spacing="10">
+											<Rectangle Fill="{Binding Hex}"
+													   Width="15"
+													   Height="15"/>
+											
+											<TextBlock Text="{Binding Name}" 
+													   VerticalAlignment="Center"/>
+
+											<TextBlock Text="{Binding Hex}"
+													   Opacity=".5"
+													   VerticalAlignment="Center"/>
+										</StackPanel>
+									</DataTemplate>
+								</ComboBox.ItemTemplate>
+							</ComboBox>
+						</StackPanel>
+
+						<!-- Others options here -->
+					</StackPanel>
 				</TabItem>
 			</TabControl>
 		</Grid>
