--- a/Tengu/Views/DownloadControl.axaml
+++ b/Tengu/Views/DownloadControl.axaml
@@ -88,14 +88,21 @@
 										<icons:MaterialIcon Kind="Remove" />
 									</Button>
 
-									<TextBlock Text="{Binding DownloadInfo.Infos.Percentage, StringFormat='\{0\}%'}"
-											   HorizontalAlignment="Right"
-											   Grid.Column="1"
-											   Grid.Row="1"/>
+									<StackPanel Orientation="Horizontal"
+												Grid.Column="1"
+												HorizontalAlignment="Right"
+												Grid.Row="1"
+												Spacing="5">
+										<TextBlock Text="{Binding DownloadInfo.Status, StringFormat='\{0\}..'}"
+												   Opacity=".5"/>
+										<TextBlock Text="{Binding DownloadInfo.Infos.Percentage, StringFormat='\{0\}%'}"
+												   MinWidth="45"
+												   TextAlignment="Right"/>
+									</StackPanel>
 
 								</Grid>
 
-								<ProgressBar Value="100"
+								<ProgressBar Value="{Binding DownloadInfo.Infos.Percentage}"
 											 Margin="0,5,0,0"
 											 Grid.Row="1"/>
 							</Grid>
