--- a/Tengu/Views/HomePageControl.axaml
+++ b/Tengu/Views/HomePageControl.axaml
@@ -3,6 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+			 xmlns:data="using:Tengu.Data"
 			 xmlns:ui="using:FluentAvalonia.UI.Controls"
 			 xmlns:vm="using:Tengu.ViewModels"
 		     xmlns:icons="using:Material.Icons.Avalonia"
@@ -30,6 +31,14 @@
 			<StackPanel>
 				<TextBlock Text="TENGU" 
 						   Classes="SubtitleTextBlockStyle" />
+				<StackPanel Orientation="Horizontal"
+							Opacity=".8"
+							Spacing="5">
+					<TextBlock Text="Version"
+							   FontSize="15"/>
+					<TextBlock Text="{x:Static data:Details.DisplayVersion}"
+							   FontSize="15"/>
+				</StackPanel>
 				<TextBlock Text="A Light Weight and User Friendly UI of Tengu.Business: an Anime web scrapper library." 
 						   Margin="0,10,0,0"/>
 
